<resources>
    <string name="app_name">MTG Rules</string>
    <string name="dialog_select_rules">Select rules</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="change_theme_restart">The application will restart</string>
    <string name="dialog_ok">Ok</string>
    <string name="menu_home">Home</string>
    <string name="menu_random_rule">Random rule</string>
    <string name="menu_search">Search</string>
    <string name="menu_change_rules">Change rules</string>
    <string name="menu_change_theme">Change theme</string>
    <string name="menu_about">About</string>
    <string name="menu_compare_rules">Compare rules (experimental)</string>
    <string name="context_copy">Copy</string>
    <string name="context_read">Read</string>
    <string name="toast_tts_not_ready">Text-to-speech not ready yet</string>
    <string name="toast_tts_not_working">Text-to-speech not working</string>
    <string name="action_bar_rules">Rules</string>
    <string name="about_description">This app is supposed to be a fast and functional source of Magic rules</string>
    <string name="about_unofficial">This is NOT an official app and it is NOT affiliated with <b>Wizards of the Coast (https://magic.wizards.com)</b></string>
    <string name="about_any_request">Any request?</string>
    <string name="about_email" translatable="false">ivancea96@outlook.com</string>
    <string name="dialog_select_source_rules">Select source rules</string>
    <string name="dialog_select_target_rules">Select target rules</string>
    <string name="compare_changed_to">CHANGED TO</string>
    <string name="notification_channel_new_rules_name">New rules available</string>
    <string name="notification_channel_new_rules_description">Sent when a new rules set is available. Usually happening when the app is updated</string>
    <string name="notification_channel_new_rules_body">Rules: %1$s</string>
    <string name="context_share">Share</string>
    <string name="menu_toggle_symbols">Show/Hide symbols</string>
    <string name="search_hint">E.g. \"can be\" target</string>
    <string name="alert_notification_permission_title">Notification permissions</string>
    <string name="alert_notification_permission_message">We will send you notifications about new rules, and maybe new relevant things in the future.\n\nGrant the notifications permission if you want those notifications.\n\nYou can also choose which notifications to receive in the android app configuration.</string>
    <string name="context_search_in_rule">Search in rule</string>
    <string name="context_search_in_rule_dialog_title">Search in rule %1$s</string>
    <string name="context_search_in_rule_dialog_message">Search only in the rule and its subrules</string>
    <string name="menu_more">More options</string>
    <string name="list_no_items">No items</string>
    <string name="menu_activate_ads">Support the app: Enable ads</string>
    <string name="menu_deactivate_ads">Stop supporting the app with ads</string>
    <string name="menu_other_rules">Other rules...</string>
    <string name="menu_other_rules_magic_tournament_rules">Magic tournament rules</string>
    <string name="menu_other_rules_infraction_procedure_guide">Infraction procedure guide</string>
    <string name="menu_other_rules_other_documents">Other documents</string>
    <string name="menu_other_rules_about">About the links</string>
    <string name="alert_about_other_rules_message">Here you have links to external rules and documents. In case they were outdated or the links broken, you can find the latest ones in the \"Other documents\" link</string>
    <string name="changelog_added_external_links_menu">Added links to other rules documents in the menu (IPG, MTR...)</string>
    <string name="alert_changelog_title">Changelog</string>
    <string name="changelog_improved_diff_and_fix_rules_change">Improved the rules comparison view, and fixed a bug that prevented viewing older rules</string>
    <string name="about_github" translatable="false">https://github.com/ivancea/MTGRules_Android</string>
</resources>
